<resources>
    <string name="app_name">KeySpace</string>
    <string name="login">登录</string>
    <string name="register">创建新账户</string>
    <string name="welcome">欢迎使用</string>
    <string name="title_login">登录</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="confirm">确定</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="set_password">设置登录密码</string>
    <string name="back">返回</string>
    <string name="master_password">主密码</string>
    <string name="please_input_master_password_to_login">请输入主密码进行登录</string>
    <string name="please_input_master_password">请输入主密码</string>
    <string name="create">创建</string>
    <string name="please_click_create">这里什么也没有，点击 + 创建吧！</string>
    <string name="special_characters">特殊字符（&#34;!#$%&#38;\'()*+,-./:;&#60;=&#62;?@[\\]^_`{|}~）</string>
    <string name="cancel">取消</string>
</resources>