<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.start.StartFragment">

    <!--标题栏-->
    <LinearLayout
        android:id="@+id/ll_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_10dp"
            android:layout_marginEnd="@dimen/margin_end_10dp"
            android:contentDescription="@string/back"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_10dp"
            android:gravity="center_vertical"
            android:text="@string/title_login"
            android:textSize="@dimen/title_size_24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!--邮箱-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/margin_5dp"
        android:hint="@string/email"
        app:errorTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/ll_title_bar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            tools:text="gongzheng0815@qq.com" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--密码-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/margin_5dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:errorTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:text="16692865351" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--确认密码-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/margin_5dp"
        android:hint="@string/confirm_password"
        app:endIconMode="password_toggle"
        app:errorTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:text="16692865351" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--主密码-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/master_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/margin_5dp"
        android:hint="@string/master_password"
        app:endIconMode="password_toggle"
        app:errorTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/master_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:text="16692865351" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm"
        android:textSize="@dimen/textSize_m_18dp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/cornerRadius_5dp"
        app:layout_constraintTop_toBottomOf="@id/master_password_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>
